--- a/css/Lathe-R-Beam.css
+++ b/css/Lathe-R-Beam.css
@@ -5,10 +5,10 @@ body {
 #logo {
 	display: block;
 	text-indent: -9999px;
-	width: 420px;
-	height: 140px;
-	background: url(../images/zlathe.png);
-	margin: 10px 0;
+	width: 500px;
+	height: 130px;
+	background: url(../images/latherbeam.png);
+	margin: 5px auto;
 }
 
 #canvasContainer {
